fix codeMirror filed word wrap bug

--- a/client/src/styles/_sass/partials/_codemirror.scss
+++ b/client/src/styles/_sass/partials/_codemirror.scss
@@ -29,5 +29,9 @@
   .cm-variable-2 {
     color: inherit;
   }
+  .cm-srting,
+  .cm-url {
+    word-break: break-all;
+  }
 }
 
